# perso-2026a-gabuz52

./: escape-room.cabal  index.html  script.js
Escape Room/: Main.hs  style.css
